<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ParkMyCar</string>
    <string name="please_turn_on_gps">Enable GPS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="Stored_Location_Details">CurrentLocation</string>
    <string name="Stored_Location_Longitude">Longitude</string>
    <string name="Stored_Location_Latitude">Latitude</string>
    <string name="Stored_Location_TimeInMs">ParkedTime</string>
    <string name="Last_Stored_Location_Longitude">LastLongitude</string>
    <string name="Last_Stored_Location_Latitude">LastLatitude</string>
    <string name="Last_Stored_Location_TimeInMs">LastParkedTime</string>
    <string name="Last_Stored_Parking_Location_Id">LastStoredParkingLocationId</string>
    <string name="Destination_Location_Longitude">LastLongitude</string>
    <string name="Destination_Location_Latitude">LastLatitude</string>
    <string name="Destination_Parking_Location_Id">DestinationParkingLocationId</string>
    <string name="Destination_Parking_Location_Name">DestinationParkingLocationName</string>
    <string name="isNavigatingToParkingLocation">isNavigatingToParkingLocation</string>
    <string name="reachedDestination">reachedDestination</string>
    <string name="lastMotionType">lastMotionType</string>    
    <string name="Is_Location_Stored">isStored</string>
    <string name="start_reminder">Start Reminder</string>
    <string name="stop_reminder">Stop Reminder</string>
    <string name="search_hint">Enter address</string>
     <string name="view">View Details</string>
     <string name="colHeader1">DayOfWeek</string>
     <string name="colHeader2">Price/hr</string>
     <string name="colHeader3">Price/Day</string>
     <string name="navigate_btn">Get Directions</string>
     <string name="pps_label">This is a public parking space.</string>
     <string name="npa_label">Pricing information is not available.</string>
     <string name="walking_directions">Walking directions to the parked location.</string>
     <string name="parking_option">Parks your car at the current location.</string>
     <string name="clear_parked_location">Clear the parked location.</string>
     <string name="default_elapsed_time">00:00:00</string>
     <string name="default_distance">0.00 miles</string>
     <string name="content_desc_upvote">UpVote</string>
     <string name="content_desc_downvote">downVote</string>
     
</resources>
