<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/search"
          android:title="@string/search_title"
          android:icon="@drawable/ic_search"
          yourapp:showAsAction="ifRoom"
          yourapp:actionViewClass="android.widget.SearchView" />

    <!--  addint to menu items for start & stop reminder buttons -->
    <!--  @author: Bhavya -->
    <item android:id="@+id/startReminder"
        android:title="@string/start_reminder"
        android:icon="@android:drawable/ic_lock_idle_alarm"
        android:showAsAction="never" />
    <item android:id="@+id/cancelReminder"
        android:title="@string/stop_reminder"
        android:icon="@android:drawable/ic_delete"
        android:showAsAction="never" />
    	  

</menu>
